# Projects

./: .gitignore
AlifengStb/: ali.js  readme.txt
ArduinoJson/: json.h  readme.txt
ArduinoWifiOscilloscope/: readme.txt
BeerHoist/: readme.md
CicParser2021/: xenon2.asm
CicoJit/: readme.md
CicoJit/gamelib/tuneller/cicorun/: CMakeLists.txt  controls.h  ega.h  main.cpp  tunneler.cpp
CicoJit/gamelib/tuneller/cicorun/CicoProject.xcodeproj/: project.pbxproj
CncRigidityMeas/: WebSocketServer.cpp  crypto.cpp  crypto.h  mojeAP.ino  readme.txt  res_favicon.h  res_highcharts.h  res_index.h  resources.h  wifi.h
CoopDoor/: build_test.sh  build_wasm.sh  readme.md
Dmx/: controller.js  readme.txt
EdcColdStart/: index.html  readme.md
EnviroMonitor/: EnviroMonitor.ino  OregonScientificServer.ino  readme.txt
Esp8266UartLogger/: Base64.h  Esp8266UartLogger.ino  WebSocketServer.cpp  WebSocketServer.h  hanhwa.md  index.html  resources.h
EspDallas/: debug.h  espdallas.ino  wifiRequest.h  wifiUploader.h
GrblMicroScanner/: index.html  readme.md  test.js  vis.html
Homography/: final.html  generator.html  readme.md
InvtRs485/: log.txt  readme.md
Kataster/: generator.js  kataster.js  output.kml  readme.md  readme.txt  viewer.js
MotorMonitor/: motormonitor.ino
MultisampledUart/: bitbang.h  readme.txt
NovationLaunchpad/: build_syx.sh  build_wasm.sh  readme.md
Ork100Firmware/: readme.txt
ParkingBot/: readme.md
Raytracer/: raytracer.html  readme.md
STM32H573I-DK/: build.bat  clone.bat  flash.bat  readme.md  readme.txt
Simcom900Driver/: gprs.h  readme.txt  (+3 more)
(+1357 files in other folders)
